Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentication-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/authentication/
        pathType: Prefix
        backend:
          service:
            name: authentication-api-service
            port:
              number: 8080
